Fix quest panel tile overlap by drawing corners above edges

--- a/src/index.css
+++ b/src/index.css
@@ -469,36 +469,36 @@ p {
   image-rendering: crisp-edges;
   background-color: #7b4e2c;
   background-image:
-    url('../panel/panel_tl.png'),
-    url('../panel/panel_tr.png'),
-    url('../panel/panel_bl.png'),
-    url('../panel/panel_br.png'),
+    url('../panel/panel_center.png'),
     url('../panel/panel_top.png'),
     url('../panel/panel_bottom.png'),
     url('../panel/panel_left.png'),
     url('../panel/panel_right.png'),
-    url('../panel/panel_center.png');
-  background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, repeat-x, repeat-x, repeat-y, repeat-y, repeat;
+    url('../panel/panel_tl.png'),
+    url('../panel/panel_tr.png'),
+    url('../panel/panel_bl.png'),
+    url('../panel/panel_br.png');
+  background-repeat: repeat, repeat-x, repeat-x, repeat-y, repeat-y, no-repeat, no-repeat, no-repeat, no-repeat;
   background-position:
-    top left,
-    top right,
-    bottom left,
-    bottom right,
+    top 32px left 32px,
     top left 32px,
     bottom left 32px,
     top 32px left,
     top 32px right,
-    top 32px left 32px;
+    top left,
+    top right,
+    bottom left,
+    bottom right;
   background-size:
-    32px 32px,
-    32px 32px,
-    32px 32px,
-    32px 32px,
+    calc(100% - 64px) calc(100% - 64px),
     calc(100% - 64px) 32px,
     calc(100% - 64px) 32px,
     32px calc(100% - 64px),
     32px calc(100% - 64px),
-    calc(100% - 64px) calc(100% - 64px);
+    32px 32px,
+    32px 32px,
+    32px 32px,
+    32px 32px;
 }
 
 .hero-kicker {
